--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,9 +72,9 @@ services:
        WORDPRESS_DB_HOST: db
        WORDPRESS_DB_USER: wp-user
        WORDPRESS_DB_PASSWORD: wp-pass
-       VIRTUAL_HOST: semestral.southcentralus.cloudapp.azure.com 
-       LETSENCRYPT_HOST: semestral.southcentralus.cloudapp.azure.com
-       LETSENCRYPT_EMAIL: christianespinoza@gmail.com
+       VIRTUAL_HOST: dns.com
+       LETSENCRYPT_HOST: dns.com
+       LETSENCRYPT_EMAIL: email@example.com
     volumes:
       - ./wordpress-files:/var/www/html
     networks:
